overflow-fix

--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ body {
     padding: 0;
     scroll-behavior: smooth;
     overflow-x: hidden;
+    width: 100%;
+    position: relative;
 
 }
 
@@ -47,8 +49,6 @@ main {
     margin: 0;
     margin-top: -3em;
 }
-
-
 
 .main-title h1{
     margin-top: 5em;
@@ -111,6 +111,9 @@ p {
     font-style: normal;
 }
 
+.arrow{
+    width: 50px;
+}
 
 span {
     color: var(--orange);
@@ -193,7 +196,7 @@ nav{
     position: static;
     width: 100%;
     z-index: 10;
-    background-image: none;
+    overflow: hidden;
     overflow-x: hidden;
 }
 
@@ -201,11 +204,13 @@ nav{
     display: flex;
     justify-content: space-evenly;
     font-family: Arial, Helvetica, sans-serif;
+    
 }
 
 .nav-links li {
     list-style: none;
     margin-right: 2em;
+
 }
 
 .nav-links a {
@@ -340,8 +345,8 @@ nav{
 }
 
 .about img{
-    width: 450px;
-    margin: 1em 0;
+    width: 380px;
+    margin-bottom: 1em;
 }
 
 
@@ -720,7 +725,7 @@ iframe {
 
 .project-img img {
     transition: transform .6s;
-    width: 450px;
+    width: 500px;
     margin: 0 auto;
     padding: 1.3em;
     box-shadow: 0 0 8px 1px var(--grey);
@@ -1328,6 +1333,8 @@ footer {
     .about img {
         width: 40%;
         margin-left: 2em;
+        margin-bottom: 0;
+        
     }
     .about {
         display: flex;
